# RSTools-playground

./: configure.ac
src/: Makefile.am
src/playground/: .gitignore  Makefile.am  rsfit  rsfit.c  rsfit_common.c  rsfit_common.h  rsfit_ui.c  rsfit_ui.h  rsfixcorrelation.c  rsfixcorrelation_common.c  rsfixcorrelation_common.h  rsfixcorrelation_ui.c  rsfixcorrelation_ui.h  rsgenerateepi.c  rsgenerateepi_common.c  rsgenerateepi_common.h  rsgenerateepi_ui.c  rsgenerateepi_ui.h  rsmutualinformation.c  rsmutualinformation_common.c  rsmutualinformation_common.h  rsmutualinformation_ui.c  rsmutualinformation_ui.h  rsneighbourhoodcorrelation.c  rsneighbourhoodcorrelation_common.c  rsneighbourhoodcorrelation_common.h  rsneighbourhoodcorrelation_ui.c  rsneighbourhoodcorrelation_ui.h  rssamplefilegen.c  rssamplefilegen_common.c  rssamplefilegen_common.h  rssamplefilegen_ui.c  rssamplefilegen_ui.h  rsvarsubjectsttest.c
