bin_PROGRAMS = rsvarsubjectsttest rsfit rssamplefilegen rsgenerateepi

rsvarsubjectsttest_SOURCES = rsvarsubjectsttest.c
rsfit_SOURCES = rsfit.c rsfit_common.c rsfit_ui.c
rssamplefilegen_SOURCES = rssamplefilegen.c rssamplefilegen_common.c rssamplefilegen_ui.c
rsgenerateepi_SOURCES = rsgenerateepi.c rsgenerateepi_common.c rsgenerateepi_ui.c
